# ImageReader

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: UpdateSubmodules.cmake
inc/: Exceptions.hpp  IReader.hpp  ImageReader.hpp  OCRModel.hpp
src/: CMakeLists.txt  ImageReader.cpp  OCRModel.cpp
test/: CMakeLists.txt  IReader_test.cpp  ImageReader_test.cpp  OCRModel_test.cpp  ex_test.cpp
